clmrpc: define ListLocalBatchSnapshots
